--- a/qmul/csp759/CW2/230382466-Bheki_Maenetja-CW2.ipynb
+++ b/qmul/csp759/CW2/230382466-Bheki_Maenetja-CW2.ipynb
@@ -46,7 +46,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
-    "pip install plotly\n",
+    "!pip install plotly\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "import plotly.io as pio\n",
