--- a/d2l-book/ch3_linear_regression.ipynb
+++ b/d2l-book/ch3_linear_regression.ipynb
@@ -10,8 +10,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "c4738ca0-763b-40bd-9b39-fb7ed2db3d37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%reload_ext autoreload\n",
+    "%autoreload 2\n",
+    "import sys\n",
+    "sys.path.insert(0, \"/Users/bhekimaenetja/Desktop/Developer/small-projects-ai/\")\n",
+    "\n",
+    "from plotting.plot import *\n",
+    "from random import *"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b4f1e16b-88be-421b-9eda-d7525e1c4042",
+   "id": "181e3b11-4479-4d28-b289-3b0c1ecf57e6",
    "metadata": {},
    "outputs": [],
    "source": []
